Fri Aug 30 22:37:49 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread_pthread.c (native_thread_create): define attr only if it is
	  used, and merge pthread_create() calls.

	* thread_pthread.c (get_main_stack): separate function to get stack of
	  main thread.

	* thread_pthread.c (native_thread_init_stack): wait the creator thread
	  to fill machine stack info, if get_stack_of() is available.

	* thread_pthread.c (native_thread_create): fill the created thread
	  stack info after starting, if get_stack_of() is available.

	* thread_pthread.c (native_thread_create): define attr only if it is
	  used, and merge pthread_create() calls.

	* thread_pthread.c (get_main_stack): separate function to get stack of
	  main thread.

Thu Aug 29 18:05:33 2013  Koichi Sasada  <ko1@atdot.net>

	* struct.c (rb_struct_define_without_accessor_under): added.
	  This function is similar to rb_define_class_under() against
	  rb_define_class().

	* include/ruby/intern.h: add a declaration of this function.

Thu Aug 29 17:03:10 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_insnhelper.c (vm_call_method): a method entry refers the based
	  class/module, so should search superclass from the origin i-class
	  where the entry belongs to, to get rid of infinite loop when zsuper
	  in a prepended class/module.  [ruby-core:54105] [Bug #8238]

Thu Aug 29 05:35:58 2013  Eric Hodel  <drbrain@segment7.net>

	* ext/zlib/zlib.c (zstream_run):  Fix handling of deflate streams that
	  need a dictionary but are being decompressed by Zlib::Inflate.inflate
	  (which has no option to set a dictionary).  Now Zlib::NeedDict is
	  raised instead of crashing.  [ruby-trunk - Bug #8829]
	* test/zlib/test_zlib.rb (TestZlibInflate):  Test for the above.

Thu Aug 29 02:40:45 2013  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/scalar_scanner.rb: invalid floats should be
	  treated as strings.
	  [Fixes GH-156] https://github.com/tenderlove/psych/issues/156
