@@ -1,4 +1,10 @@
-Fri Aug 30 22:37:49 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+Fri Aug 30 22:37:57 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* thread_pthread.c (native_thread_init_stack): wait the creator thread
+	  to fill machine stack info, if get_stack_of() is available.
+
+	* thread_pthread.c (native_thread_create): fill the created thread
+	  stack info after starting, if get_stack_of() is available.
 
 	* thread_pthread.c (native_thread_create): define attr only if it is
 	  used, and merge pthread_create() calls.
